data/Java/07-missing-semi/6/[M]Error.txt
*https://www.tutorialspoint.com/java/java_innerclasses.htm
Outerclass.java:15: error: ';' expected
       inner.print()
                    ^